# efgp_jax

./: .gitignore  LICENSE  README.md  pyproject.toml
efgp_jax/: __init__.py  basis_eval.py  cg.py  efgp.py  gp.py  kernels.py  nufft.py  optimize.py  quadrature.py  toeplitz.py
examples/: bench_basis_eval.py  gp_discretization.py  gp_discretization_1d.py  gp_discretization_2d.py  hyperparameter_fitting.py  time_series.py  time_series_precond.py
tests/: test_basis_eval.py  test_cg.py  test_efgp.py  test_efgp_sample.py  test_gp.py  test_kernels.py  test_nufft.py  test_optimize.py  test_quadrature.py
