[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efgp_jax"
version = "0.1.0"
description = "Equispaced Fourier Gaussian Process regression in JAX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Philip Greengard"},
]
keywords = ["gaussian-process", "jax", "spectral-methods", "nufft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax>=0.4.27",
    "jaxlib>=0.4.27",
    "jax-finufft>=0.1.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
examples = ["matplotlib"]

[project.urls]
Repository = "https://github.com/pgreengard/efgp_jax"

[tool.setuptools.packages.find]
include = ["efgp_jax*"]
